--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2694,3 +2694,42 @@ body {
   #feature-tours {
     color: #fff;
   }
+
+  .mA-header {
+    border-bottom: 1px solid #fff;
+
+  }
+
+  #navbarDropdown {
+    color: #fd5822;
+    letter-spacing: 1px;
+    font-size: 16px;
+    font-weight: bold;
+  }
+
+  #navbarDropdown:hover {
+    background-color: #fb5722;
+    color: #fff;
+  }
+
+  .user {
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  }
+
+  .mA-item {
+    font-size: 18px;
+    letter-spacing: 1px;
+  }
+
+  .nav-link {
+    color:#fb5722;
+    letter-spacing: 1px;
+    font-weight: 800;
+  }
+
+  .nav-link:hover, .selected {
+    background-color: #fb5722;
+    color: #fff;
+    font-weight: 800;
+  }
+
