save subscription to db and launch modal

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2733,3 +2733,9 @@ body {
     font-weight: 800;
   }
 
+  #subscribe {
+    font-size: 16px;
+    letter-spacing: 2px;
+    font-weight: bold;
+  }
+
